# raw_bytes

./: LICENSE  README.md
fixed_point/src/: fixed_small.rs
packed_bits/: README.md
packed_bits/examples/: basic_usage.rs
packed_bits/src/: container.rs  error.rs  flags.rs  lib.rs  packed_bits.rs
packed_bits/tests/: proptest.rs
packed_data/examples/: parsing.rs
packed_data/src/: builder.rs  convert.rs  io.rs  iter.rs  lib.rs  prelude.rs
packed_structs/: Cargo.toml
packed_structs/examples/: bit_fields.rs
packed_structs/src/: container.rs  lib.rs
raw_bytes/: Cargo.toml
raw_bytes/benches/: access_patterns.rs
raw_bytes/examples/: 01_basic_in_memory.rs  02_bulk_operations.rs  03_index_syntax.rs  04_mmap_readonly.rs  05_mmap_readwrite.rs  06_performance_comparison.rs  raw_bytes_in_memory.rs  raw_bytes_mmap_readonly.rs  raw_bytes_mmap_readwrite.rs
raw_bytes/fuzz/: Cargo.toml
raw_bytes/fuzz/fuzz_targets/: storage_mmap.rs
raw_bytes/fuzz/fuzz_targets/fuzz_targets/: container.rs  storage_in_memory.rs
raw_bytes/src/: container.rs  lib.rs  storage.rs
raw_bytes/tests/: prop_container.rs  prop_storage.rs
save/: Cargo.toml
save/src/: lib.rs  merkle.rs  save.rs
save/tests/: basic.rs
vm/src/: main.rs
